--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -1,7 +1,7 @@
 @use "mixin";
 
 body{
-    font-family: 'Robot', sans-serif;
+    font-family: 'M+ 1m', sans-serif;    
     font-weight: bold;
     color: #707070;
     width: 100%;
