--- a/scss/object/component/_button.scss
+++ b/scss/object/component/_button.scss
@@ -7,6 +7,7 @@
     top: 14px;
     right: 16px;
     color: #707070;
+    font-family: 'Robot', sans-serif;
     font-weight: bold;
     border: none;
     @include mixin.tab{
