--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,6 +9,7 @@
     a{
         text-decoration: none;
         color: #707070;
+        font-family: 'Robot', sans-serif;
     }
     
     @include mixin.tab {
