--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,8 @@ single
 @media screen and (min-width: 600px) {
   .c-single__btn {
     margin-bottom: 60px;
+    width: 430px;
+    padding: 40px 0;
   }
 }
 .c-single__btn > a {
